crates/rhdl/tests/roll_your_own_not_fails.expect
  × RHDL Syntax Error
  ╰─▶ RHDL Syntax Error
    ╭─[/Users/samitbasu/Devel/rhdl/crates/rhdl/tests/type_rolling.rs:84:17]
 83 │         let h = h.val();
 84 │         let j = !h;
    ·                 ─┬
    ·                  ╰── RHDL does not support the use of unary operators on this type
 85 │         signal(j.any())
    ╰────
  help: You cannot roll your own ! operator in RHDL.  You should write a kernel and call it as a regular function.
